syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true; // For julia client
option java_package = "lambdarpc.transport.grpc";
package lambdarpc.transport.grpc;

import "Entity.proto";
import "ExecuteError.proto";

message InFirstRequest {
  string serviceUUID = 1;
  string accessName = 2;
  repeated Entity args = 3;
}

message InExecuteResponse {
  string accessName = 1;
  oneof content {
    Entity result = 2;
    ExecuteError error = 3;
  }
}

message InMessage {
  oneof content {
    InFirstRequest firstRequest = 1;
    InExecuteResponse executeResponse = 2;
  }
}
